# error_translator

./: LICENSE  README.md  cli.py  core.py  detector.py  pyproject.toml  test_error_translator.py  translator.py
src/error_translator/: advisor.py
