[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "error-translator"
version = "0.1.0"
description = "Detect, translate, and get AI-powered advice for error messages across Python, JavaScript, Java, and more"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["error", "translator", "debugging", "AI", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Utilities",
]
dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.20.0"]
openai = ["openai>=1.0.0"]
all = ["anthropic>=0.20.0", "openai>=1.0.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
error-translator = "error_translator.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/error-translator"
Issues = "https://github.com/yourusername/error-translator/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/error_translator"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
strict = true
